Added basic layout for the landing page. Added Jquery CDN in main

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Speak</title>
+    <!-- JQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <!-- Foundation CSS CDN-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css"
         crossorigin="anonymous">
@@ -16,7 +19,7 @@
     <div>
         <header>
             <h1>
-                <a class="custom-title" href="/">Team Speak</a>
+                <a class="custom-title" href="/">TeamSpeak</a>
             </h1>
             <nav>
                 <ul>
@@ -26,15 +29,12 @@
                 </ul>
             </nav>
         </header>
-        <div class="custom-hero">
-            <h2>Hey, Friend.</h2>
-            <h3>Catchy tagline goes here</h3>
-        </div>
+
         <main>
             {{{ body }}}
         </main>
         <footer>
-            &copy; Team Speak 2022
+            &copy; TeamSpeak 2022
         </footer>
     </div>
 </body>
