--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,7 +19,7 @@
           <input type="password" placeholder=".medium-6.cell" class="form-input" id="password-signup">
         </label>
       </div>
-      <button class="submit success button">Signup!</button>
+      <button class="submit success button" id="signup-button">Signup!</button>
     </div>
   </div>
 </form>
