--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -10,9 +10,9 @@
     <!--Zig Zag info section? -->
 
     <div class="feature-news">
-        <div class="article">{{{article.1}}}</div>
-        <div class="article">{{{article.2}}}</div>
-        <div class="article">{{{article.3}}}</div>
+        <div class="article">{{article.article.short_description}}</div>
+        {{!-- <div class="article">{{{article.2}}}</div>
+        <div class="article">{{{article.3}}}</div> --}}
     </div>
 
 
