fixed signup-admin and signup page

--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -1,12 +1,12 @@
 <form>
     <div>
-        <h3>Signup your Company</h3>
+        <h3>Register your Company</h3>
     </div>
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
       <div class="medium-6 cell">
         <label for="company-name-signup">What is the name of your Company?
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="company-name-signup">
+          <input type="text" placeholder=".medium-6.cell" class="form-input" id="company-name-signup" required>
         </label>
       </div>
       <div class="medium-6 cell">
@@ -15,7 +15,7 @@
         </label>
       </div>
       <a href="" class="add-team-button">Add a Team</a>
-      <button class="submit success button" id="company-signup-button">Signup!</button>
+      <button class="submit success button" id="company-signup-button">Finsih Registering!</button>
     </div>
   </div>
 </form>
