--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,17 +6,17 @@
     <div class="grid-x grid-padding-x">
       <div class="medium-6 cell">
         <label for="email-login">Enter your Email
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="email-login">
+          <input type="text" placeholder=".medium-6.cell" class="form-input" id="email-login" required>
         </label>
       </div>
       <div class="medium-6 cell">
         <label for="username-login">Enter your Username
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="username-login">
+          <input type="text" placeholder=".medium-6.cell" class="form-input" id="username-login" required>
         </label>
       </div>
       <div class="medium-6 cell">
         <label for="password-login">Enter your Password
-          <input type="password" placeholder=".medium-6.cell" class="form-input" id="password-login">
+          <input type="password" placeholder=".medium-6.cell" class="form-input" id="password-login" required>
         </label>
       </div>
       <button class="submit success button">Login</button>
