added in the company register and the user sign up functionality

--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -11,11 +11,11 @@
       </div>
       <div class="medium-6 cell">
         <label for="company-team-signup">What is the name of a team at your company?
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="company-team-signup" required>
+          <input type="text" placeholder=".medium-6.cell" class="form-input company-team-signup" required>
         </label>
       </div>
       <a href="" class="add-team-button">Add a Team</a>
-      <button class="submit success button" id="company-signup-button">Finsih Registering!</button>
+      <button class="submit success button" id="company-signup-button">Finish Registering!</button>
     </div>
   </div>
 </form>
