--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -1,3 +1,16 @@
+<div class="card" style="width: 300px;">
+  <div class="card-divider">
+    This is a header
+  </div>
+  <img src="assets/img/generic/rectangle-1.jpg">
+  <div class="card-section">
+    <h4>This is a card.</h4>
+    <p>It has an easy to override visual style, and is appropriately subdued.</p>
+  </div>
+</div>
+
+
+
 <div class="feature-news">
         <div class="article">{{article.article.short_description}}</div>
         {{!-- <div class="article">{{{article.2}}}</div>
