--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -1,7 +1,7 @@
 <form>
-    <div>
-        <h3>Register your Company</h3>
-    </div>
+  <div>
+    <h3>Register your Company</h3>
+  </div>
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
       <div class="medium-6 cell">
@@ -21,3 +21,4 @@
 </form>
 
 <script src="/js/adminSignUp.js"></script>
+<script src="/utils/listTeam.js"></script>
