worked on login.js

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
           <input type="password" placeholder=".medium-6.cell" class="form-input" id="password-login" required>
         </label>
       </div>
-      <button class="submit success button">Login</button>
+      <button class="submit success button" id="logInBtn">Login</button>
       <a href="/signup" class="button">Don't have an account? Signup Here!</a>
     </div>
   </div>
