--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -21,4 +21,4 @@
 </form>
 
 <script src="/js/adminSignUp.js"></script>
-<script src="/utils/listTeam.js"></script>
+<script src="/js/teamList.js"></script>
