added company register button, and log in button on user sign up page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,7 @@
 <form>
     <div>
         <h3>Signup Below!</h3>
+        <a href="/signupadmin">Registering a Company? Click Here!</a>
     </div>
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
@@ -30,6 +31,7 @@
         </label>
       </div>
       <button class="submit success button" id="signup-button">Signup!</button>
+      <a href="/login">Already have an account? Log in here!</a>
     </div>
   </div>
 </form>
