changed register button href in user sign up page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <form>
     <div>
         <h3>Signup Below!</h3>
-        <a href="/signupadmin">Registering a Company? Click Here!</a>
+        <a href="/register">Registering a Company? Click Here!</a>
     </div>
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
