Added color pallete for application.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,12 +30,15 @@
             </nav>
         </header>
 
-        <main>
-            {{{ body }}}
-        </main>
-        <footer>
-            &copy; TeamSpeak 2022
-        </footer>
+        <body>
+            <main>
+                {{{ body }}}
+            </main>
+            <footer class="theme-color">
+                &copy; TeamSpeak 2022
+            </footer>
+        </body>
+
     </div>
 </body>
 
