added comments to all public js files, added script file connections to login and signup handlebars, and commented user and home routes

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,37 +1,40 @@
 <form>
     <div>
         <h3>Signup Below!</h3>
-        <a href="/signupadmin">Registering a Company? Click Here!</a>
+        <a href="/register">Registering a Company? Click Here!</a>
     </div>
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x">
-      <div class="medium-6 cell">
-        <label for="user-company">What is the name of the company you work at?
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="user-company" required>
-        </label>
-      </div>
-     <div class="medium-6 cell">
-        <label for="user-team"> What is the name of the team you are part of at your company?
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="user-team" required>
-        </label>
-      </div>
-      <div class="medium-6 cell">
-        <label for="email-signup">Create your Email
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="email-signup" required>
-        </label>
-      </div>
-      <div class="medium-6 cell">
-        <label for="username-signup">Create your Username
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="username-signup" required>
-        </label>
-      </div>
-      <div class="medium-6 cell">
-        <label for="password-signup">Create your Password
-          <input type="password" placeholder=".medium-6.cell" class="form-input" id="password-signup" required>
-        </label>
-      </div>
-      <button class="submit success button" id="signup-button">Signup!</button>
-      <a href="/login">Already have an account? Log in here!</a>
+    <div class="grid-container">
+        <div class="grid-x grid-padding-x">
+            <div class="medium-6 cell">
+                <label for="user-company">What is the name of the company you work at?
+                    <input type="text" placeholder=".medium-6.cell" class="form-input" id="user-company" required>
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label for="user-team"> What is the name of the team you are part of at your company?
+                    <input type="text" placeholder=".medium-6.cell" class="form-input" id="user-team" required>
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label for="email-signup">Create your Email
+                    <input type="text" placeholder=".medium-6.cell" class="form-input" id="email-signup" required>
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label for="username-signup">Create your Username
+                    <input type="text" placeholder=".medium-6.cell" class="form-input" id="username-signup" required>
+                </label>
+            </div>
+            <div class="medium-6 cell">
+                <label for="password-signup">Create your Password
+                    <input type="password" placeholder=".medium-6.cell" class="form-input" id="password-signup"
+                        required>
+                </label>
+            </div>
+            <button class="submit success button" id="signup-button">Signup!</button>
+            <a href="/login">Already have an account? Log in here!</a>
+        </div>
     </div>
-  </div>
 </form>
+
+<script src="/js/userSignUp.js"></script>
