worked on user dashboard

--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -8,6 +8,16 @@
     <p>It has an easy to override visual style, and is appropriately subdued.</p>
   </div>
 </div>
+<div class="card" style="width: 300px;">
+  <div class="card-divider">
+    This is a header
+  </div>
+  <img src="assets/img/generic/rectangle-1.jpg">
+  <div class="card-section">
+    <h4>This is a card.</h4>
+    <p>It has an easy to override visual style, and is appropriately subdued.</p>
+  </div>
+</div>
 
 
 
