--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,12 +5,8 @@ html {
 
 /* Color Functions */
 
-.theme-color {
-    background-color: #E1C45B;
-    color: #2D2B34;
-}
-
-.theme-color-border {
-    color: #E1C45B;
+.delete-button {
+    width: 50px;
+    height: 50px;
 }
 
