--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -11,7 +11,7 @@
       </div>
       <div class="medium-6 cell">
         <label for="company-team-signup" id="team-list">What is the name of a team at your company?
-          <input type="text" placeholder=".medium-6.cell" class="form-input company-team-signup" required>
+          <input type="text" placeholder="Team Name" class="form-input company-team-signup" required>
         </label>
       </div>
       <a href="" class="add-team-button">Add a Team</a>
