--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -1,28 +1,149 @@
-<div class="card" style="width: 300px;">
-  <div class="card-divider">
-    This is a header
+<div class="reveal" id="preferencesModal" data-reveal>
+  <div class="card-divider" c>
+    <h3>Preferences</h3>
   </div>
-  <img src="assets/img/generic/rectangle-1.jpg">
-  <div class="card-section">
-    <h4>This is a card.</h4>
-    <p>It has an easy to override visual style, and is appropriately subdued.</p>
+  <div>
+    <fieldset class="large-6 cell">
+      <legend>Select which categories you prefer to read about</legend>
+      <input id="checkbox1" type="checkbox"><label for="checkbox1">Sports</label>
+      <input id="checkbox2" type="checkbox"><label for="checkbox2">Politics</label>
+      <input id="checkbox3" type="checkbox"><label for="checkbox3">Wellness</label>
+      <input id="checkbox4" type="checkbox"><label for="checkbox4">Travel</label>
+      <input id="checkbox5" type="checkbox"><label for="checkbox5">Style & Beauty </label>
+      <input id="checkbox6" type="checkbox"><label for="checkbox6">Healthy Living</label>
+      <input id="checkbox7" type="checkbox"><label for="checkbox7">Parenting</label>
+      <input id="checkbox8" type="checkbox"><label for="checkbox8">Queer Voices</label>
+      <input id="checkbox9" type="checkbox"><label for="checkbox9">Food & Drink</label>
+      <input id="checkbox10" type="checkbox"><label for="checkbox10">Business</label>
+      <input id="checkbox11" type="checkbox"><label for="checkbox11">Comedy</label>
+      <input id="checkbox12" type="checkbox"><label for="checkbox12">Black Voices</label>
+      <input id="checkbox13" type="checkbox"><label for="checkbox13">Home & Living</label>
+      <input id="checkbox14" type="checkbox"><label for="checkbox14">Parents</label>
+      <input id="checkbox15" type="checkbox"><label for="checkbox15">Entertainment</label>
+    </fieldset>
+    <button type="submit" class="button" id="select-preferences-btn">Submit Preferences!</button>
   </div>
 </div>
-<div class="card" style="width: 300px;">
-  <div class="card-divider">
-    This is a header
-  </div>
-  <img src="assets/img/generic/rectangle-1.jpg">
-  <div class="card-section">
-    <h4>This is a card.</h4>
-    <p>It has an easy to override visual style, and is appropriately subdued.</p>
-  </div>
-</div>
-
-
-
-<div class="feature-news">
-        <div class="article">{{article.article.short_description}}</div>
-        {{!-- <div class="article">{{{article.2}}}</div>
-        <div class="article">{{{article.3}}}</div> --}}
+<h3>
+  Browse your News for the Day!
+</h3>
+<div class="grid x">
+  <div class="card cell medium-4" style="width: 500px">
+    <div class="card-divider">
+      <h3 href="{{article.article.link}}">
+        <a>
+          Article Title Here
+        </a>
+      </h3>
+      <p><button class="button" data-open="postModal">Create a Post!</button></p>
     </div>
+    <div class="card-section">
+      <h4>Link to Article Here</h4>
+    </div>
+    <div class="card-section">
+      <h4>Short Description Here</h4>
+    </div>
+    <div class="reveal" id="postModal" data-reveal>
+      <form>
+        <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
+        <button href="/teamDashboard">Submit Post!</button>
+        <!-- <button class="close-button" data-close aria-label="Close modal" type="button"> -->
+      </form>
+    </div>
+  </div>
+  <div class="card cell medium-4" style="width: 500px">
+    <div class="card-divider">
+      <h3 href="{{article.article.link}}">
+        <a>
+          Article Title Here
+        </a>
+      </h3>
+      <p><button class="button" data-open="postModal">Create a Post!</button></p>
+    </div>
+    <div class="card-section">
+      <h4>Link to Article Here</h4>
+    </div>
+    <div class="card-section">
+      <h4>Short Description Here</h4>
+    </div>
+    <div class="reveal" id="postModal" data-reveal>
+      <form>
+        <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
+        <button href="/teamDashboard">Submit Post!</button>
+        <!-- <button class="close-button" data-close aria-label="Close modal" type="button"> -->
+      </form>
+    </div>
+  </div>
+  <div class="card cell medium-4" style="width: 500px">
+    <div class="card-divider">
+      <h3 href="{{article.article.link}}">
+        <a>
+          Article Title Here
+        </a>
+      </h3>
+      <p><button class="button" data-open="postModal">Create a Post!</button></p>
+    </div>
+    <div class="card-section">
+      <h4>Link to Article Here</h4>
+    </div>
+    <div class="card-section">
+      <h4>Short Description Here</h4>
+    </div>
+    <div class="reveal" id="postModal" data-reveal>
+      <form>
+        <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
+        <!-- <button class="close-button" data-close aria-label="Close modal" type="button"> -->
+          <button href="/teamDashboard">Submit Post!</button>
+      </form>
+    </div>
+  </div>
+  <div class="card cell medium-4" style="width: 500px">
+    <div class="card-divider">
+      <h3 href="{{article.article.link}}">
+        <a>
+          Article Title Here
+        </a>
+      </h3>
+      <p><button class="button" data-open="postModal">Create a Post!</button></p>
+    </div>
+    <div class="card-section">
+      <h4>Link to Article Here</h4>
+    </div>
+    <div class="card-section">
+      <h4>Short Description Here</h4>
+    </div>
+    <div class="reveal" id="postModal" data-reveal>
+      <form>
+        <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
+        <button href="/teamDashboard">Submit Post!</button>
+        <!-- <button class="close-button" data-close aria-label="Close modal" type="button"> -->
+      </form>
+    </div>
+  </div>
+  <div class="card cell medium-4" style="width: 500px">
+    <div class="card-divider">
+      <h3 href="{{article.article.link}}">
+        <a>
+          Article Title Here
+        </a>
+      </h3>
+      <p><button class="button" data-open="postModal">Create a Post!</button></p>
+    </div>
+    <div class="card-section">
+      <h4>Link to Article Here</h4>
+    </div>
+    <div class="card-section">
+      <h4>Short Description Here</h4>
+    </div>
+    <div class="reveal" id="postModal" data-reveal>
+      <form>
+        <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
+        <button href="/teamDashboard">Submit Post!</button>
+        <!-- <button class="close-button" data-close aria-label="Close modal" type="button"> -->
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
