--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,19 +15,12 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 
-<body>
+<body class="home">
     <div>
         <header>
             <h1>
                 <a class="custom-title" href="/">TeamSpeak</a>
             </h1>
-            <nav>
-                <ul>
-                    <li>Your News</li>
-                    <li>Signup/Login</li>
-                    <li>Logout</li>
-                </ul>
-            </nav>
         </header>
 
         <body>
