--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,11 @@ html {
     height: 50px;
 }
 
+ .home {
+    background-color: #fdf0d5ff; 
+    height: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;  
+}
+
