--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -1,20 +1,22 @@
-<div class="landing-container">
+<div class="landing-container landing">
 
-
-    <!-- height: 100%;-->
     <div class="custom-hero">
-        <h2>Hey, Friend.</h2>
-        <h3>Catchy tagline goes here</h3>
+        <h2>TeamSpeak is your Team's digital cohesion location!   </h2>
+        <p>Chat about current events with your Team<p>
+            {{!-- screen shot of article with post? --}}
     </div>
 
-    <!--Zig Zag info section? -->
-
-    <div class="feature-news">
-        <div class="article">{{article.article.short_description}}</div>
-        {{!-- <div class="article">{{{article.2}}}</div>
-        <div class="article">{{{article.3}}}</div> --}}
+    <div>
+        <h2>Build a cohesive Team!</h2>
+        <p>We've seen how forced team building creates diversion amongst Teams<p>
+        {{!-- cheesy photo of --}}
     </div>
 
+    <div>
+        <h2>Speak about what you want!</h2>
+        <p>Introduce your Team to topics meaningful to you.<p>
+        {{!-- cheesy photo  --}}
+    </div>
 
     <div>
         <a class="button primary" href="/signup">SignUp/Login</a>
