added cdn to main and changed names of placeholders in forms

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,6 +33,9 @@
         </body>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
+        crossorigin="anonymous">
+    </script>
     <script>
         $(document).foundation();
     </script>
