--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -1,3 +1,4 @@
+<p><button class="button" data-open="preferencesModal">Add your prefrences!</button></p>
 <div class="reveal" id="preferencesModal" data-reveal>
   <div class="card-divider" c>
     <h3>Preferences</h3>
