--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,12 +6,12 @@
     <div class="grid-x grid-padding-x">
       <div class="medium-6 cell">
         <label for="email-login">Enter your Email
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="email-login" required>
+          <input type="text" placeholder="Email" class="form-input" id="email-login" required>
         </label>
       </div>
       <div class="medium-6 cell">
         <label for="password-login">Enter your Password
-          <input type="password" placeholder=".medium-6.cell" class="form-input" id="password-login" required>
+          <input type="password" placeholder="Password" class="form-input" id="password-login" required>
         </label>
       </div>
       <button class="submit success button" id="logInBtn">Login</button>
