--- a/views/signup-admin.handlebars
+++ b/views/signup-admin.handlebars
@@ -6,7 +6,7 @@
     <div class="grid-x grid-padding-x">
       <div class="medium-6 cell">
         <label for="company-name-signup">What is the name of your Company?
-          <input type="text" placeholder=".medium-6.cell" class="form-input" id="company-name-signup" required>
+          <input type="text" placeholder="Company Name" class="form-input" id="company-name-signup" required>
         </label>
       </div>
       <div class="medium-6 cell">
