Created comments handlebar file. Added p tag for footer content. created footer class and moved to the bottom of the page through CSS. Added font and theme colors in CSS and for the main page.

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -17,7 +17,7 @@
         <div class="cell">
             <div class="card custom-card">
                 <div class="card-section">
-                    <h4>Article Title</h4>
+                    <h4>{{article.article.headline}}</h4>
                     <p>User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
                         necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
                         Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
@@ -30,16 +30,3 @@
         </div>
     </div>
 </div>
-
-<!-- THE CARD TO DYNAMICALLY GENERATE PER TEAM MEMBER POST
-    <div class="cell">
-            <div class="card">
-                <div class="card-section">
-                    <h4>This is a card.</h4>
-                    <p>It has an easy to override visual style, and is appropriately subdued.</p>
-                </div>
-            </div>
-        </div>
-
-
--->
