--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,74 @@
-html {
-    background-color: #2D2B34;
-    color: #F5F5F5;
+:root {
+    /* THEME COLORS (STILL FINALIZING)*/
+    /* ---- vars ---- */
+    /* background color */
+    --background: #EBEBEB;
+    /* component colors */
+    --theme: #52b788;
+    --off-theme: #27634a;
+    /* Support color */
+    --black: #2A2A2A;
+
+    /* FONTS */
+    /* font-weight: var(--rubik-light) */
+    --rubik-light: 300;
+    --rubik-base: 400;
+    --rubik-bold: 600;
 }
 
-/* Color Functions */
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6, 
+p, 
+a {
+    font-family: 'Rubik', monospace, sans-serif;
+}
+
+.custom-title {
+    color: var(--black);
+}
+
+.custom-title:hover {
+    color: var(--theme);
+    cursor: pointer;
+}
 
 .delete-button {
     width: 50px;
     height: 50px;
 }
 
- .home {
-    background-color: #fdf0d5ff; 
-    height: 100%;
+.custom-card {
+    box-shadow: 0px 12px 28px -7px rgba(0,0,0,0.75);
+    border-radius: 8px;
+    padding: 12px;
+}
+
+.custom-card:hover {
+    transform: translateY(-0.5rem);
+    transition: 0.1s;
+    border: 3px solid var(--theme);
+    box-shadow: 0px 12px 28px -7px var(--off-theme);
+}
+
+.home {
+    background-color: var(--background);
+    height: 100vh;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;  
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
 }
