Added navbar for app header

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,12 @@
             <h1>
                 <a class="custom-title" href="/">TeamSpeak</a>
             </h1>
+            <ul class="menu">
+                <li><a href="/login">Your News</a></li>
+                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/signup-admin">Register</a></li>
+                <li><a href="#">Logout</a></li>
+            </ul>
         </header>
         <main>
             {{{ body }}}
