--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,9 +36,15 @@ a {
     cursor: pointer;
 }
 
+.custom-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .delete-button {
-    width: 50px;
-    height: 50px;
+    width: 10px;
+    height: 10px;
 }
 
 .custom-card {
