--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -1,30 +1,26 @@
 <div class="grid-container">
-    <div class="grid-x grid-margin-x small-up-1 medium-up-2 large-up-3">
+    <div class="grid-x grid-margin-x small-up-1 medium-up-1 large-up-1">
         <div class="cell">
             <div class="card custom-card">
                 <div class="card-section">
-                    <h4>{{article.article.headline}}</h4>
+                    <h4>ARTICLE HEADLINE FROM USER SELECTION</h4>
                     <p>User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
                         necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
                         Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
                         consectetur adipisicing elit.
                     </p>
-                    <p>USERNAME - DATE</p>
-                    <a href="">Click to show Comments</a>
                 </div>
             </div>
         </div>
         <div class="cell">
             <div class="card custom-card">
                 <div class="card-section">
-                    <h4>{{article.article.headline}}</h4>
+                    <h4>ARTICLE HEADLINE FROM USER SELECTION</h4>
                     <p>User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
                         necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
                         Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
                         consectetur adipisicing elit.
                     </p>
-                    <p>USERNAME - DATE</p>
-                    <a href="">Show Comments</a>
                 </div>
             </div>
         </div>
