--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,10 +30,10 @@
                 <a class="custom-title" href="/">TeamSpeak</a>
             </h1>
             <ul class="menu">
-                <li><a href="/login">Your News</a></li>
+                <li><a href="/userDashboard">Your News</a></li>
                 <li><a href="/signup">Sign Up</a></li>
-                <li><a href="/signup-admin">Register</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/register">Register</a></li>
+                <li><a href="/" id="logout-btn">Logout</a></li>
             </ul>
         </header>
         <main>
