--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -1,26 +1,57 @@
 <div class="grid-container">
     <div class="grid-x grid-margin-x small-up-1 medium-up-1 large-up-1">
         <div class="cell">
-            <div class="card custom-card">
+            <div class="card article-post-card">
                 <div class="card-section">
-                    <h4>ARTICLE HEADLINE FROM USER SELECTION</h4>
-                    <p>User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
+                    <h4 class="post-title">ARTICLE HEADLINE FROM USER SELECTION</h4>
+                    <p class="post-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Impedit, quo
                         necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
                         Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
                         consectetur adipisicing elit.
                     </p>
                 </div>
-            </div>
-        </div>
-        <div class="cell">
-            <div class="card custom-card">
-                <div class="card-section">
-                    <h4>ARTICLE HEADLINE FROM USER SELECTION</h4>
-                    <p>User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
-                        necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
-                        Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
-                        consectetur adipisicing elit.
-                    </p>
+                <div class="card comment-card">
+                    <div class="card-section">
+                        <p>USERNAME</p>
+                        <p class="comment-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                            Impedit, quo
+                            necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
+                            Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit
+                            amet
+                            consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+
+                {{!-- comments below --}}
+
+                <div class="card comment-card">
+                    <div class="card-section">
+                        <p class="username">USERNAME</p>
+                        <p class="comment-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                            Impedit, quo
+                            necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
+                            Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit
+                            amet
+                            consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+                <div class="card comment-card">
+                    <div class="card-section">
+                        <p>USERNAME</p>
+                        <p class="comment-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                            Impedit, quo
+                            necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
+                            Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit
+                            amet
+                            consectetur adipisicing elit.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
