--- a/views/teamDashboard.handlebars
+++ b/views/teamDashboard.handlebars
@@ -10,7 +10,7 @@
                         consectetur adipisicing elit.
                     </p>
                     <p>USERNAME - DATE</p>
-                    <a href="">Click to show Comments</a>
+                    <a href="/comments">Click to show Comments</a>
                 </div>
             </div>
         </div>
@@ -24,7 +24,7 @@
                         consectetur adipisicing elit.
                     </p>
                     <p>USERNAME - DATE</p>
-                    <a href="">Show Comments</a>
+                    <a href="/comments">Show Comments</a>
                 </div>
             </div>
         </div>
