got the query to pull news data based on user preferences to work, but will not display in handlebars, fixed some model issues, and other problems

--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -93,7 +93,7 @@
       <div class="reveal" id="postModal" data-reveal>
         <form>
           <h4> example article title
-            {{article.article.headline}} </h4>
+            {{article}} </h4>
           <input type="text" placeholder="Enter your post here" class="form-input" id="post-input" required>
           <a href="/teamDashboard" class="submit">Submit Post!</a>
         </form>
