added userdashboard.js and added some changes to handlebars

--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -38,7 +38,7 @@
           </a>
         </h3>
         <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus"></i>
+          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
         </button>
       </div>
       <div class="card-section">
@@ -61,7 +61,7 @@
           </a>
         </h3>
         <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus"></i>
+          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
         </button>
       </div>
       <div class="card-section">
@@ -84,7 +84,7 @@
           </a>
         </h3>
         <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus"></i>
+          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
         </button>
       </div>
       <div class="card-section">
@@ -107,7 +107,7 @@
           </a>
         </h3>
         <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus"></i>
+          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
         </button>
       </div>
       <div class="card-section">
@@ -130,7 +130,7 @@
           </a>
         </h3>
         <button data-open="postModal">
-          <i class="fa-solid fa-square-plus custom-plus"></i>
+          <i class="fa-solid fa-square-plus custom-plus" id="new-form-btn"></i>
         </button>
       </div>
       <div class="card-section">
