--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,46 @@
-html {
-    background-color: #2D2B34;
-    color: #F5F5F5;
+:root {
+    /* THEME COLORS (STILL FINALIZING)*/
+    /* ---- vars ---- */
+    /* background color */
+    --background: #EBEBEB;
+    /* component colors */
+    --theme: #52b788;
+    --off-theme: #27634a;
+    /* Support color */
+    --black: #2A2A2A;
+
+    /* FONTS */
+    /* font-weight: var(--rubik-light) */
+    --rubik-light: 300;
+    --rubik-base: 400;
+    --rubik-bold: 600;
 }
 
-/* Color Functions */
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6, 
+p, 
+a {
+    font-family: 'Rubik', monospace, sans-serif;
+}
+
+.custom-title {
+    color: var(--black);
+}
+
+.custom-title:hover {
+    color: var(--theme);
+    cursor: pointer;
+}
+
+.custom-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 .delete-button {
     width: 10px;
@@ -23,10 +60,38 @@ html {
     box-shadow: 0px 12px 28px -7px var(--off-theme);
 }
 
+.article-post-card {
+    box-shadow: 0px 12px 28px -7px rgba(0,0,0,0.75);
+    border-radius: 8px;
+    padding: 12px;
+    height: 85vh;
+}
+
+.post-body {
+    border-bottom: 2px solid #2A2A2A;
+}
+
+.comment-card {
+    border: 2px solid var(--theme);
+    border-radius: 8px;
+}
+
+
 .home {
     background-color: var(--background);
     height: 100vh;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;  
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
 }
