--- a/views/teamDashboard.handlebars
+++ b/views/teamDashboard.handlebars
@@ -24,7 +24,7 @@
                         consectetur adipisicing elit.
                     </p>
                     <p>USERNAME - DATE</p>
-                    <a href="/comments">Show Comments</a>
+                    <a href="/comments">Click to show Comments</a>
                 </div>
             </div>
         </div>
@@ -43,3 +43,4 @@
 
 
 -->
+<script src="/js/"></script>
