changed some link path names, adding in the queries for displaying posts

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
                 <a class="custom-title" href="/">TeamSpeak</a>
             </h1>
             <ul class="menu">
-                <li><a href="/userDashboard">Your News</a></li>
+                <li><a href="/dashboard/my-news">Your News</a></li>
                 <li><a href="/signup">Sign Up</a></li>
                 <li><a href="/register">Register</a></li>
                 <li><a href="/" id="logout-btn">Logout</a></li>
