--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -52,7 +52,7 @@
           {{headline}} </h4>
         <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
         <textarea type="text" placeholder="Enter your post here" class="form-input" name="post-input" required></textarea>
-        <a href="/teamDashboard" class="submit" id="submit-post">Submit Post!</a>
+        <a href="/dashboard/my-news" class="submit" id="submit-post">Submit Post!</a>
       </form>
     </div>
   </div>
