--- a/views/teamDashboard.handlebars
+++ b/views/teamDashboard.handlebars
@@ -1,32 +1,17 @@
 <div class="grid-container">
     <div class="grid-x grid-margin-x small-up-1 medium-up-2 large-up-3">
         <div class="cell">
+            {{#each posts}}
             <div class="card custom-card">
                 <div class="card-section">
-                    <h4>{{article.article.headline}}</h4>
-                    <p>User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
-                        necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
-                        Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
-                        consectetur adipisicing elit.
+                    <h4>{{title}}</h4>
+                    <p>{{body}}
                     </p>
-                    <p>USERNAME - DATE</p>
+                    <p>{{username}} - {{updated_at}}</p>
                     <a href="/comments">Click to show Comments</a>
                 </div>
             </div>
-        </div>
-        <div class="cell">
-            <div class="card custom-card">
-                <div class="card-section">
-                    <h4>Article Title</h4>
-                    <p>User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quo
-                        necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
-                        Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
-                        consectetur adipisicing elit.
-                    </p>
-                    <p>USERNAME - DATE</p>
-                    <a href="/comments">Click to show Comments</a>
-                </div>
-            </div>
+            {{/each}}
         </div>
     </div>
 </div>
@@ -43,4 +28,5 @@
 
 
 -->
-{{!-- <script src="/js/"></script> --}}
+{{!--
+<script src="/js/"></script> --}}
