added logout handelbars and get route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
                 <li><a href="/userDashboard">Your News</a></li>
                 <li><a href="/signup">Sign Up</a></li>
                 <li><a href="/register">Register</a></li>
-                <li><a href="/" id="logout-btn">Logout</a></li>
+                <li><a href="/logout" id="logout-btn">Logout</a></li>
             </ul>
         </header>
         <main>
