--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -3,56 +3,24 @@
         <div class="cell">
             <div class="card article-post-card">
                 <div class="card-section">
-                    <h4 class="post-title">ARTICLE HEADLINE FROM USER SELECTION</h4>
-                    <p class="post-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Impedit, quo
-                        necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
-                        Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit amet
-                        consectetur adipisicing elit.
-                    </p>
+                    <h4 class="post-title">{{postData.title}}</h4>
+                    <p>{{postData.body}}</p>
+                    <a href={{postData.link}}>Read the article here</a>
+                    <p class="post-body"> Posted by: {{postData.user.username}} at {{postData.createdAt}}</p>
                 </div>
+                {{#if postData.comments}}
+                <section>
+                <div><h5>Team Comments</h5></div>
+                {{#each postData.comments}}
                 <div class="card comment-card">
                     <div class="card-section">
-                        <p>USERNAME</p>
-                        <p class="comment-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
-                            Impedit, quo
-                            necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
-                            Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit
-                            amet
-                            consectetur adipisicing elit.
-                        </p>
+                        <p>{{user.username}} - {{createdAt}}</p>
+                        <p class="comment-body">{{body}}</p>
                     </div>
                 </div>
-
-                {{!-- comments below --}}
-
-                <div class="card comment-card">
-                    <div class="card-section">
-                        <p class="username">USERNAME</p>
-                        <p class="comment-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
-                            Impedit, quo
-                            necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
-                            Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit
-                            amet
-                            consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
-                <div class="card comment-card">
-                    <div class="card-section">
-                        <p>USERNAME</p>
-                        <p class="comment-body">User Post body - Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
-                            Impedit, quo
-                            necessitatibus recusandae dolor perspiciatis nesciunt repellendus. Eaque id earum esse.
-                            Cupiditate aut in quidem minus neque est! Voluptatum, fuga illum. Lorem ipsum, dolor sit
-                            amet
-                            consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </div>
+                {{/each}}
+                </section>
+                {{/if}}
             </div>
         </div>
     </div>
