logout link should go to logout page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
                 <li><a href="/login" class="login-btn">Login</a></li>
                 <li><a href="/signup" class="sign-up-btn">Sign Up</a></li>
                 <li><a href="/register" class="register-btn">Register your Company</a></li>
-                <li><a href="/" class="logout-btn" id="logout-btn">Logout</a></li>
+                <li><a href="/logout" class="logout-btn" id="logout-btn">Logout</a></li>
             </ul>
 
             {{!-- DROPDOWN MENU FOR RESPONSIVE DESIGN --}}
