--- a/views/teamDashboard.handlebars
+++ b/views/teamDashboard.handlebars
@@ -7,7 +7,7 @@
                     <h4>{{title}}</h4>
                     <p>{{body}}
                     </p>
-                    <p>{{username}} - {{updated_at}}</p>
+                    <p>- {{username}}, {{format_date_time updated_at}}</p>
                     <a href="/posts/{{post_id}}">Click to show Comments</a>
                 </div>
             </div>
