--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -48,8 +48,7 @@
     </div>
     <div class="reveal" id="postModal" data-reveal>
       <form>
-        <h4 data-id={{article_id}} id="article-id"> Article title:
-          {{headline}} </h4>
+        <h4 data-id={{article_id}} id="article-id">{{headline}} </h4>
         <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
         <textarea type="text" placeholder="Enter your post here" class="form-input" name="post-input" required></textarea>
         <a href="/teamDashboard" class="submit" id="submit-post">Submit Post!</a>
