--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,7 +66,7 @@
     <script>
         $(document).foundation();
     </script>
-    <script src="js/navLoginCheck.js"></script>
 </body>
 
 </html>
+<script src="./js/logout.js"></script>
