Added login check for dynamic navbar, added info sections to landingpage, added several styles for landing page and custom button

--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -1,21 +1,43 @@
 <div class="landing-container landing">
+    <div class="hero-container">
 
-    <div class="custom-hero">
-        <h2>TeamSpeak is your Team's digital cohesion location!   </h2>
-        <p>Chat about current events with your Team<p>
-            {{!-- screen shot of article with post? --}}
+        <div class="media-object stack-for-small">
+            <div class="media-object-section">
+                <div class="">
+                    <img src="/images/heroImage-unsplash-mario-gogh.jpg" class="hero-img">
+                </div>
+            </div>
+            <div class="sub-container">
+                <div class="media-object-section">
+                    <h4>TeamSpeak is your Team's digital cohesion location!</h4>
+                    <p>Chat about current events with your Team</p>
+                    <a class="hero-btn">Join the conversation!</a>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <h2>Build a cohesive Team!</h2>
-        <p>We've seen how forced team building creates diversion amongst Teams<p>
-        {{!-- cheesy photo of --}}
+    <div class="info-container">
+        <div class="media-object stack-for-small">
+            <div class="sub-container">
+                <div class="media-object-section">
+                    <h4>Build a cohesive Team!</h4>
+                    <p>We've seen how forced team building creates diversion amongst Teams</p>
+                </div>
+            </div>
+            <div class="media-object-section">
+                <div class="">
+                    <img src="/images/heroImage-unsplash-mario-gogh.jpg" class="hero-img">
+                </div>
+            </div>
+        </div>
     </div>
 
     <div>
         <h2>Speak about what you want!</h2>
-        <p>Introduce your Team to topics meaningful to you.<p>
-        {{!-- cheesy photo  --}}
+        <p>Introduce your Team to topics meaningful to you.
+        <p>
+            {{!-- cheesy photo --}}
     </div>
 
     <div>
