--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@
     --off-theme: #27634a;
     /* Support color */
     --black: #2A2A2A;
+    --off-black: #201f1f;
 
     /* FONTS */
     /* font-weight: var(--rubik-light) */
@@ -27,8 +28,22 @@ a {
     font-family: 'Rubik', monospace, sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4 {
+    color: var(--theme);
+    /* color: var(--background); */
+}
+
+p,
+a {
+    color: var(--background);
+    /* color: var(--theme); */
+}
+
 .custom-title {
-    color: var(--black);
+    color: var(--background);
 }
 
 .custom-title:hover {
@@ -36,10 +51,45 @@ a {
     cursor: pointer;
 }
 
+.hero-img {
+    width: 420px;
+    height: auto;
+}
+
+.form-btn {
+    padding: 6px;
+    border: 2px solid var(--theme);
+    background-color: var(--off-black);
+}
+
+.form-btn:hover {
+    color: var(--off-black);
+    background-color: var(--theme);
+    box-shadow: 0px 12px 28px -7px rgba(39, 99, 74, 0.75);
+    transition: 0.3s;
+}
+
+.hero-container {
+    margin: 0;
+    background-color: var(--off-black);
+    color: var(--theme);
+}
+
+.sub-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.info-container {
+    background-color: var(--black);
+}
+
 .custom-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: var(--black);
 }
 
 .delete-button {
@@ -90,7 +140,7 @@ a {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
